Ajustes demais capitulos. Falta resumo e conclusão.

--- a/conteudo/capitulo10.tex
+++ b/conteudo/capitulo10.tex
@@ -1,4 +1,4 @@
-\chapter*{Apêndice D - Projetos}\label{projeto}
+\chapter*{Apêndice E - Projetos}\label{projeto}
 
 O desenvolvimento do Portal de Algoritmos foi dividido em dois códigos bases, \textit{backend} e \textit{frontend} e foi feito o versionamento de código utilizando o protocolo \textit{git} e repositório de código \textit{bitbucket}.
 
