--- a/conteudo/capitulo4.tex
+++ b/conteudo/capitulo4.tex
@@ -1171,7 +1171,7 @@ Diagramas de Robustez tem por objetivo demonstrar a ligação dos casos de uso com
 
 \subsection{Cadastro de Aluno}
 
-A Figura \ref{rbRegistroAluno} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroAluno}.
+A Figura \ref{rbRegistroAluno} demonstra as associações das classes de domínio na interface gráfica de cadastro de alunos.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1187,7 +1187,7 @@ A Figura \ref{rbRegistroAluno} demonstra as associações das classes de domínio n
 
 \subsection{Autenticação}
 
-A Figura \ref{rbAutenticacao} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkAutenticacao}.
+A Figura \ref{rbAutenticacao} demonstra as associações das classes de domínio na interface gráfica de autenticação.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1203,8 +1203,7 @@ A Figura \ref{rbAutenticacao} demonstra as associações das classes de domínio na
 
 \subsection{Boas Vindas do Administrador e do Professor}
 
-A Figura \ref{rbBoasVindasAdministrador} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkBoasVindasAdministrador}.
-
+A Figura \ref{rbBoasVindasAdministrador} demonstra as associações das classes de domínio na interface gráfica de boas vindas.
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
@@ -1217,7 +1216,7 @@ A Figura \ref{rbBoasVindasAdministrador} demonstra as associações das classes de
 
 \subsection{Problemas}
 
-A Figura \ref{rbProblemas} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkListaProblemas}.
+A Figura \ref{rbProblemas} demonstra as associações das classes de domínio na interface gráfica de listagem de problemas.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1231,7 +1230,7 @@ A Figura \ref{rbProblemas} demonstra as associações das classes de domínio na in
 
 \subsection{Tipo de Problema}
 
-A Figura \ref{rbTipoProblema} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkNovoTipoProblema}.
+A Figura \ref{rbTipoProblema} demonstra as associações das classes de domínio na interface gráfica de novo tipo de problemas.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1245,7 +1244,7 @@ A Figura \ref{rbTipoProblema} demonstra as associações das classes de domínio na
 
 \subsection{Cadastro e Edição de Problema}
 
-A Figura \ref{rbCadastroProblema} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkNovoProblema}.
+A Figura \ref{rbCadastroProblema} demonstra as associações das classes de domínio na interface gráfica de cadastro de novo problema.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1261,7 +1260,7 @@ A Figura \ref{rbCadastroProblema} demonstra as associações das classes de domíni
 
 \subsection{Palavras-chave}
 
-A Figura \ref{rbPalavraChave} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkPalavrasChaves}.
+A Figura \ref{rbPalavraChave} demonstra as associações das classes de domínio na interface gráfica de cadastro de palavras chaves.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1275,7 +1274,7 @@ A Figura \ref{rbPalavraChave} demonstra as associações das classes de domínio na
 
 \subsection{Dados de Testes}
 
-A Figura \ref{rbDadosTestes} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkDadosTestes}.
+A Figura \ref{rbDadosTestes} demonstra as associações das classes de domínio na interface gráfica de cadastro de dados de testes.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1291,7 +1290,7 @@ A Figura \ref{rbDadosTestes} demonstra as associações das classes de domínio na 
 
 \subsection{Visualização de Solução partindo da listagem de Problemas}
 
-A Figura \ref{rbVisualizacaoSolucao1} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkVisualizacaoSolucao1}.
+A Figura \ref{rbVisualizacaoSolucao1} demonstra as associações das classes de domínio na interface gráfica de visualização da solução de problemas.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1305,7 +1304,7 @@ A Figura \ref{rbVisualizacaoSolucao1} demonstra as associações das classes de do
 
 \subsection{Lista de Grupos}
 
-A Figura \ref{rbListaGrupos} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkListaGrupos}.
+A Figura \ref{rbListaGrupos} demonstra as associações das classes de domínio na interface gráfica de listagem de grupos.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1321,7 +1320,7 @@ A Figura \ref{rbListaGrupos} demonstra as associações das classes de domínio na 
 
 \subsection{Cadastro e Edição de Grupo}
 
-A Figura \ref{rbCadastroGrupo} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroGrupo}.
+A Figura \ref{rbCadastroGrupo} demonstra as associações das classes de domínio na interface gráfica de cadastro e edição de grupos.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1335,7 +1334,7 @@ A Figura \ref{rbCadastroGrupo} demonstra as associações das classes de domínio n
 
 \subsection{Adicionar Participantes}
 
-A Figura \ref{rbVisualizacaoSolucao2} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkParticipantes}.
+A Figura \ref{rbVisualizacaoSolucao2} demonstra as associações das classes de domínio na interface gráfica de adicionar participantes a um grupo.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1351,7 +1350,7 @@ A Figura \ref{rbVisualizacaoSolucao2} demonstra as associações das classes de do
 
 \subsection{Adicionar Lista de Problemas}
 
-A Figura \ref{rbListaProblema} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkGrupoListaProblemas}.
+A Figura \ref{rbListaProblema} demonstra as associações das classes de domínio na interface gráfica de adicionar listas de problemas a um grupo.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1367,7 +1366,7 @@ A Figura \ref{rbListaProblema} demonstra as associações das classes de domínio n
 
 \subsection{Lista de Alunos}
 
-A Figura \ref{rbListaAlunos} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkListaAlunos}.
+A Figura \ref{rbListaAlunos} demonstra as associações das classes de domínio na interface gráfica e listagem de alunos.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1383,7 +1382,7 @@ A Figura \ref{rbListaAlunos} demonstra as associações das classes de domínio na 
 
 \subsection{Cadastro de Alunos pelo Administrador}
 
-A Figura \ref{rbCadastroAlunoAdministrador} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroAlunoAdmin}.
+A Figura \ref{rbCadastroAlunoAdministrador} demonstra as associações das classes de domínio na interface gráfica de cadastro de aluno.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1399,7 +1398,7 @@ A Figura \ref{rbCadastroAlunoAdministrador} demonstra as associações das classes
 
 \subsection{Lista de Problemas}
 
-A Figura \ref{rbListaProblemas} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkListaProblemasListagem}.
+A Figura \ref{rbListaProblemas} demonstra as associações das classes de domínio na interface gráfica de listagem de problemas.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1415,7 +1414,7 @@ A Figura \ref{rbListaProblemas} demonstra as associações das classes de domínio 
 
 \subsection{Cadastro e Edição de Lista de Problemas}
 
-A Figura \ref{rbCadastroListaProblemas} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroListaProblemas}.
+A Figura \ref{rbCadastroListaProblemas} demonstra as associações das classes de domínio na interface gráfica de cadastro e edição de listas listas de problemas.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1431,7 +1430,7 @@ A Figura \ref{rbCadastroListaProblemas} demonstra as associações das classes de 
 
 \subsection{Lista de Usuários}
 
-A Figura \ref{rbListaUsuarios} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkListaUsuario}.
+A Figura \ref{rbListaUsuarios} demonstra as associações das classes de domínio na interface gráfica de listagem de usuários.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1445,7 +1444,7 @@ A Figura \ref{rbListaUsuarios} demonstra as associações das classes de domínio n
 
 \subsection{Cadastro e Edição de Usuários}
 
-A Figura \ref{rbCadastroUsuarios} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroUsuario}.
+A Figura \ref{rbCadastroUsuarios} demonstra as associações das classes de domínio na interface gráfica de cadastro e edição de usuários.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1461,7 +1460,7 @@ A Figura \ref{rbCadastroUsuarios} demonstra as associações das classes de domíni
 
 \subsection{Lista de Professores}
 
-A Figura \ref{rbListaProfessores} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkListaProfessores}.
+A Figura \ref{rbListaProfessores} demonstra as associações das classes de domínio na interface gráfica de listagem de professores.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1475,7 +1474,7 @@ A Figura \ref{rbListaProfessores} demonstra as associações das classes de domíni
 
 \subsection{Cadastro e Edição de Professores}
 
-A Figura \ref{rbCadastroProfessores} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroProfessores}.
+A Figura \ref{rbCadastroProfessores} demonstra as associações das classes de domínio na interface gráfica de cadastro e edição de professores.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1491,7 +1490,7 @@ A Figura \ref{rbCadastroProfessores} demonstra as associações das classes de dom
 
 \subsection{Lista de Instituições}
 
-A Figura \ref{rbListaInstituicao} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkListaInstituicao}.
+A Figura \ref{rbListaInstituicao} demonstra as associações das classes de domínio na interface gráfica de listagem de instituições.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1505,7 +1504,7 @@ A Figura \ref{rbListaInstituicao} demonstra as associações das classes de domíni
 
 \subsection{Cadastro e Edição de Instituições}
 
-A Figura \ref{rbCadastroInstituicao} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroInstituicao}.
+A Figura \ref{rbCadastroInstituicao} demonstra as associações das classes de domínio na interface gráfica de cadastro e edição de instituições.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1521,7 +1520,7 @@ A Figura \ref{rbCadastroInstituicao} demonstra as associações das classes de dom
 
 \subsection{Lista de Permissões}
 
-A Figura \ref{rbListaPermissoes} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkListaPermissao}.
+A Figura \ref{rbListaPermissoes} demonstra as associações das classes de domínio na interface gráfica de listagem de permissões.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1535,7 +1534,7 @@ A Figura \ref{rbListaPermissoes} demonstra as associações das classes de domínio
 
 \subsection{Cadastro e Edição de Permissões}
 
-A Figura \ref{rbCadastroPermissoes} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroPermissao}.
+A Figura \ref{rbCadastroPermissoes} demonstra as associações das classes de domínio na interface gráfica de cadastro e edição de permissões.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1551,7 +1550,7 @@ A Figura \ref{rbCadastroPermissoes} demonstra as associações das classes de domí
 
 \subsection{Lista de Grupos de Administradores}
 
-A Figura \ref{rbListaGruposAdministradores} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkListaGrupoAdministradores}.
+A Figura \ref{rbListaGruposAdministradores} demonstra as associações das classes de domínio na interface gráfica de listagem de grupos de administradores.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1565,7 +1564,7 @@ A Figura \ref{rbListaGruposAdministradores} demonstra as associações das classes
 
 \subsection{Cadastro e Edição de Grupos de Administradores}
 
-A Figura \ref{CadastroGruposAdministradores} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroGrupoAdministradores}.
+A Figura \ref{CadastroGruposAdministradores} demonstra as associações das classes de domínio na interface gráfica de cadastro e edição de grupos de administradores.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1581,7 +1580,7 @@ A Figura \ref{CadastroGruposAdministradores} demonstra as associações das classe
 
 \subsection{Lista de Países, Estados e Cidades}
 
-A Figura \ref{rbListaPaises} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkListaPaises}.
+A Figura \ref{rbListaPaises} demonstra as associações das classes de domínio na interface gráfica de listagem de países, estados e cidades.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1595,7 +1594,7 @@ A Figura \ref{rbListaPaises} demonstra as associações das classes de domínio na 
 
 \subsection{Cadastro e Edição de País}
 
-A Figura \ref{rbCadastriPais} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroPais}.
+A Figura \ref{rbCadastriPais} demonstra as associações das classes de domínio na interface gráfica de cadastro e edição de países.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1611,7 +1610,7 @@ A Figura \ref{rbCadastriPais} demonstra as associações das classes de domínio na
 
 \subsection{Cadastro e Edição de Estado}
 
-A Figura \ref{rbCadastroEstado} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroEstado}.
+A Figura \ref{rbCadastroEstado} demonstra as associações das classes de domínio na interface gráfica de cadastro e edição de estados.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1625,7 +1624,7 @@ A Figura \ref{rbCadastroEstado} demonstra as associações das classes de domínio 
 
 \subsection{Cadastro e Edição de Cidade}
 
-A Figura \ref{rbCadastroCidade} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroCidade}.
+A Figura \ref{rbCadastroCidade} demonstra as associações das classes de domínio na interface gráfica de cadastro e edição de cidades.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1659,7 +1658,8 @@ Não foram construídos outros diagramas de sequência, porque todos seriam muito s
 
 \section{Arquitetura do Software}
 
-Para o desenvolvimento da evolução do portal de algoritmos foi definido utilizar a arquitetura de \textit{software} \ac{MVC}, estas representadas na Figura \ref{imgArquitetura}.
+Para o desenvolvimento da evolução do portal de algoritmos foi definido utilizar a arquitetura de \textit{software} \ac{MVC}, estas representadas na Figura \ref{imgArquitetura}. Onde na camada de \textit{Model} é feita a manipulação de dados, leitura, escrita de dados. Já camada de \textit{Controller} é responsável por receber todas as requisições do usuário, nessa camada possui métodos de ações. Por fim na camada de \textit{View} temos a interação com o usuário, essa camada faz apenas a exibição dos dados.
+
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1670,12 +1670,6 @@ Para o desenvolvimento da evolução do portal de algoritmos foi definido utilizar
 	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
-
-Na camada de \textit{Model} é feita a manipulação de dados, leitura, escrita de dados.
-
-Na camada de \textit{Controller} é responsável por receber todas as requisições do usuário, nessa camada possui métodos de ações.
-
-Na camada de \textit{View} temos a interação com o usuário, essa camada faz apenas a exibição dos dados.
 
 \newpage
 
@@ -1693,7 +1687,7 @@ Além da arquitetura lógica, temos a arquitetura de sistema, que é apresentado na
 
 Na camada de \textit{View e Controller} utilizamos duas tecnologias, \textit{AngularJS 4 e JAX-RS} com a implementação \textit{Jersey 2.26}, essas tecnologias são responsáveis pela exibição do dados e comunicação com a camada de modelos.
 
-A camada de \textit{POJO e JAVA 8} é responsável pela manipulação dos dados transformando-os em objetos interpretados pelo sistema operacional.
+A camada de \textit{POJO e JAVA 8} é responsável pela manipulação dos dados transformando-os em objetos \textit{Java}.
 
 Na camada de persistência temos o \ac{JDBC} que é responsável pela comunicação com o banco de dados \textit{Postgresql} 10.
  
