--- a/conteudo/capitulo6.tex
+++ b/conteudo/capitulo6.tex
@@ -16,4 +16,16 @@ Com a implementação do novo gerenciador do portal de algoritmos concluimos que f
 
 Chegamos no final desse trabalho com um \textit{software} bem escrito, estruturado e organizado com documentação de todas as chamadas das \ac{API}\textit{s}.
 
-Com esse novo \textit{software} implementado é possível planejar a criação de um aplicativo móvel, novas funcionalidades, implementações de testes unitários, testes de integrações e a integração com o analisador algorítmico implementado por Gabriel Weber.
+\section{Trabalhos Futuros}
+
+Com esse novo \textit{software} implementado é possível planejar o desenvolvimento de:
+
+\begin{itemize}
+	\item Aplicativo móvel
+	\item Novas funcionalidades necessárias
+	\item Integração com analisador algorítmico
+	\item Testes unitários
+	\item Testes de integração
+	\item Testes de interface
+\end{itemize}
+
