--- a/conteudo/capitulo7.tex
+++ b/conteudo/capitulo7.tex
@@ -1,4 +1,4 @@
-\chapter*{Apêndice A - Documentação}\label{Documentacao}
+\chapter*{Apêndice B - Documentação}\label{Documentacao}
 
 Essa documentação tem por objetivo de exemplificar todas as chamadas da API do Portal de Algoritmos.
 
