--- a/conteudo/capitulo8.tex
+++ b/conteudo/capitulo8.tex
@@ -1,4 +1,4 @@
-\chapter*{Apêndice B - SQL de criação do banco de dados}\label{SQL}
+\chapter*{Apêndice C - SQL de criação do banco de dados}\label{SQL}
 
 \textit{Script} de criação das tabelas do banco de dados.
 
