--- a/conteudo/capitulo9.tex
+++ b/conteudo/capitulo9.tex
@@ -1,4 +1,4 @@
-\chapter*{Apêndice C - Migração Banco de dados}\label{SQLMigration}
+\chapter*{Apêndice D - Migração Banco de dados}\label{SQLMigration}
 
 \textit{Script} de migraçao de dados.
 
