--- a/conteudo/capitulo4.tex
+++ b/conteudo/capitulo4.tex
@@ -32,7 +32,7 @@ Novas funcionalidades:
 	\item Manter Países, Estados e Cidades.
 \end{itemize}
 
-\section{Diagrama de Classe de Domínio}
+\section{Diagrama de Classe de Domínio}\label{scDiagramaClasse}
 
 A Figura \ref{imgDiagramaNovo} representa o diagrama de classe de domínio proposto para a evolução do portal de algoritmos. Nesse novo diagrama foram melhoradas as descrições dos campos, descrevendo-os em inglês.
 
