--- a/conteudo/capitulo6.tex
+++ b/conteudo/capitulo6.tex
@@ -8,13 +8,9 @@ O novo \textit{software} foi desenvolvido utilizando tecnologias de ponta, como 
 
 Com a nova arquitetura do \textit{software} ficou mais fácil e rápido de implementar novas funcionalidades conforme as necessidades forem surgindo. A arquitetura engloba uma \ac{API} \ac{REST} fácil de integrar e configurar.
 
-A interface gráfica ficou mais amigável e intuitiva para o usuário, utilizando padrões de telas, botões, listagem e cadastros em geral.
+O sistema existente antes da elaboração deste trabalho foi analisado a fim de identificar as possíveis possibilidades de melhoria. Como visto no Capítulo \ref{cpReengenhariaSoftware}, foi apresentada a estrutura de banco de dados e as telas que compõe a interface deste sistema. Em algumas destas telas verificou-se pouca usabilidade conforme visto nas Figuras \ref{imgAdministracaodeAlunos}, \ref{imgAdministracaodeProblemas}, \ref{imgAdministracaodeProblemasPalavraChave} e \ref{imgAdministracaodeProblemasSolucao}.
 
-Com um banco de dados atual o \textit{software} está mais confiável no armazenamento das informações cadastrais, com essa atualização estamos garantindo integridade e segurança nas informações armazenadas nele.
-
-Com a implementação do novo gerenciador do portal de algoritmos concluimos que foi construido um \textit{software} robusto, organizado, com alta qualidade de código e de fácil entendimento sobre o que ele foi proposto.
-
-Chegamos no final desse trabalho com um \textit{software} bem escrito, estruturado e organizado com documentação de todas as chamadas das \ac{API}\textit{s}.
+Na proposta de melhorias do software apresentada no Capítulo \ref{cpProposta}, observou-se a elaboração de tabelas com mais elementos e que comtemplaram as necessidades do sistema. Os diagramas de requisitos possibilitaram um melhor entendimento do problema para a implementação. Além disso foram apresentados os casos de uso para descrever estes requisitos. Com a proposta de interface gráfica e o diagrama de robustez foi possível identificar as interações do usuário com o sistema contribuindo também na implementação final e na interação com os domínios. Os diagramas de fluxo permitiram uma visão geral do software possibilitando a verificação e a validação da solução proposta.
 
 \section{Trabalhos Futuros}
 
