--- a/tcc.tex
+++ b/tcc.tex
@@ -188,7 +188,7 @@ A todos vocês, minha sincera gratidão.
 
 \begin{abstract}
 
-Esse trabalho fornece todo o processo de evolução do portal de algoritmos. O trabalho tem por objetivo realizar a evolução do \textit{software} atual para uma versão mais moderna tecnologicamente e estruturalmente. Para esse objetivo foram escolhidos tencologias atuais, como \textit{AngularJS}, \textit{Java 8}, \textit{Bootstrap 3}, \textit{Postgreslq 10}. Para atingirmos o objetivo utilizamos engenharia reversa, diagramas de casos de uso, diagrama de robustez, \textit{mockups} de interfaces gráficas e escolhemos a arquitetura \ac{MVC} para guiar no desenvolvimento. 
+Este trabalho apresenta uma breve pesquisa bibliográfica sobre evolução de \textit{software}, reengenharia e engenharia de \textit{software}, bem como a metodologia ICONIX utilizada no decorrer do trabalho. O trabalho traz uma avaliação do Portal de Algoritmos antigo para se ter uma base para que se torne possível a evolução. Além da avaliação e do estudo teórico é proposto a evolução do mesmo, através de diagramas e interface gráficas, e por fim a escrita de um novo \textit{software}.
 
 \keyword{Portal de Algoritmos}
 \keyword{Algoritmos}
