--- a/tcc.tex
+++ b/tcc.tex
@@ -187,8 +187,8 @@ A todos vocês, minha sincera gratidão.
 \listoftables
 
 \begin{abstract}
-
-Este trabalho apresenta uma breve pesquisa bibliográfica sobre evolução de \textit{software}, reengenharia e engenharia de \textit{software}, bem como a metodologia ICONIX utilizada no decorrer do trabalho. O trabalho traz uma avaliação do Portal de Algoritmos antigo para se ter uma base para que se torne possível a evolução. Além da avaliação e do estudo teórico é proposto a evolução do mesmo, através de diagramas e interface gráficas, e por fim a escrita de um novo \textit{software}.
+	
+Neste trabalho é apresentada a proposta de melhorias em um sistema utilizado em instituição de ensino. São apresentados também os principais conceitos em engenharia de software que são utilizados na avaliação do sistema e na proposta de implementação. Partindo-se da metodologia ICONIX é elaborado um novo software tomando-se como base os diagramas funcionais, casos de uso e estudo da interação do usuário com a interface gráfica. Ao final do estudo é desenvolvido um sistema atualizado, verificando-se o fluxo das informações e contemplando as tecnologias atuais para desenvolvimento de software baseado em sistemas web.
 
 \keyword{Portal de Algoritmos}
 \keyword{Algoritmos}
